--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "kotlinode",
   "version": "1.0.0",
-  "description": "",
+  "description": "NodeJs Server App with kotlin",
   "main": "index.js",
   "dependencies": {
     "kotlin": "^1.3.50"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gradle build & node node/index.js",
     "build":"gradle build"  
   },
