--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "kotlinode",
   "version": "1.0.0",
   "description": "NodeJs Server App with kotlin",
-  "main": "index.js",
+  "main": "node/index.js",
   "dependencies": {
     "express": "^4.17.1",
     "kotlin": "^1.3.50"
   },
   "devDependencies": {},
+  "nodemonConfig": {
+    "delay": "2500"
+  },
   "scripts": {
     "start": "gradle build & node node/index.js",
-    "build": "gradle build"
+    "serve":"node node/index.js",
+     "build": "gradle build"
   },
   "author": "Rajan Garg",
   "license": "ISC"
