--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "kotlin": "^1.3.50"
   },
   "devDependencies": {},
-  "nodemonConfig": {
-    "delay": "2500"
-  },
   "scripts": {
-    "start": "gradle build ",
+    "start": "gradle build & node node/index.js ",
     "serve": "node node/index.js",
     "build": "gradle build"
   },
